<resources>
    <string name="app_name">Recyclearn</string>
    <string name="delete_confirmation">Confirmation</string>
    <string name="sureToDelete">Are you sure you want to delete the task</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirmation">Completed the task!..</string>
    <string name="sureToMarkAsComplete">Are you sure you want to mark this task as completed.</string>
    <string name="congrats_you_have_completed_the_task_successfully">Congrats!... You have completed the task successfully..</string>

   //Login
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="signuphere">Create an account? <b><font color="#2ab336">Sign Up</font></b></string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="signup">Sign Up</string>
    <string name="fullname">Full name</string>
    <string name="email">Email Address</string>
    <string name="loginhere">Already have an account? <b><font color="#2ab336">Login</font></b></string>
    <string name="password_hint">Enter stronger password</string>
    <string name="image_description">Image Description</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="error_enter_firstname">Error: Please enter first name</string>
    <string name="error_enter_lastname">Error: Please enter last name</string>
    <string name="error_enter_email">Error: Please enter email address</string>
    <string name="error_enter_valid_email">Error: Email address is not valid</string>
    <string name="error_enter_username">Error: Please enter username</string>
    <string name="error_enter_password">Error: Please enter password</string>
    <string name="error_password_length">Password must meet the following criteria:\n
        - At least 8 characters long\n
        - Contains at least one uppercase letter\n
        - Contains at least one lowercase letter\n
        - Contains at least one digit
    </string>
    <string name="error_confirm_password">Error: Please confirm your password</string>
    <string name="error_password_mismatch">Error: Password mismatch</string>
    <string name="error_invalid_fullname">Error: Special characters not allowed</string>
    <string name="error_email_exists">Error: Email address already exists</string>
    <string name="error_invalid_phone_number">Error: Incorrect phone number format. Ex. 09123456789</string>
    <string name="error_enter_phone_number">Error: Please enter your phone number</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="resend_countdown">%1$d seconds</string>
    <string name="email_verification_message">We sent an email to %1$s. \n Please check your email to verify your account.</string>
    <string name="todo">TODO</string>
    <string name="about_us_description">\n\tHere at Recyclearn, we believe that small changes can make a big impact on our environment. That\'s why we created an android app to help you make sustainable choices in your daily life.\n\nOur journey began when one of our co-founders, a passionate environmentalist, noticed the lack of awareness and education about recycling among his community. He saw so much potential in using technology to bridge this gap and empower individuals to make a positive change for our planet.\n\nRecyclearn is not just about scanning plastic bottles and giving recommendations, it\'s also about creating a community of environmentally-conscious individuals who can report any harmful actions and stay informed about the latest news and updates on plastic recycling. Together, we can make a difference and create a more sustainable future for generations to come. Join us on this journey towards a greener world!</string>
    <string name="error_password_cannot_old_password">Error: New password cannot be the old password</string>
    <!-- strings.xml -->
    <string-array name="notification_interval_entries">
        <item>Every 1 Minute</item>
        <item>Every 5 Minutes</item>
        <item>Every 15 Minutes</item>
        <item>Every 30 Minutes</item>
        <item>Every 60 Minutes</item>
    </string-array>

    <string-array name="notification_interval_values">
        <item>1</item>
        <item>5</item>
        <item>15</item>
        <item>30</item>
        <item>60</item>
    </string-array>

    <string-array name="gender_options">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string name="bottle_type_hint">Select a bottle type</string>

    <string name="alt_bottom_sheet_chevron">Bottom sheet expandable indicator</string>

    <string name="alt_bottom_sheet_max_results_button_minus">Decreasing maximum classified results
        button</string>
    <string name="alt_bottom_sheet_max_results_button_plus">Increasing maximum classified results
        button</string>
    <string name="alt_bottom_sheet_threshold_button_minus">Decreasing threshold of classified image
        results button</string>
    <string name="alt_bottom_sheet_threshold_button_plus">Increasing threshold of classified image
        results button</string>
    <string name="alt_bottom_sheet_thread_button_minus">Decrease the number of threads used</string>
    <string name="alt_bottom_sheet_thread_button_plus">Increase the number of threads used</string>

    <string name="label_interence_time">Inference Time</string>
    <string name="label_fps">Frames per Second</string>
    <string name="label_confidence_threshold">Threshold</string>
    <string name="label_max_results">Max Results</string>
    <string name="label_threads">Number of Threads</string>
    <string name="label_delegate">Delegate</string>
    <string name="label_models">ML Model</string>
    <string name="default_threshold">0.50</string>
    <string name="default_inference_time">0ms</string>
    <string name="default_max_results">3</string>

    <string-array name="delegate_spinner_titles">
        <item>CPU</item>
        <item>GPU</item>
        <item>NNAPI</item>
    </string-array>

    <string-array name="models_spinner_titles">
        <item>MobileNet V1</item>
        <item>EfficientNet Lite0</item>
        <item>EfficientNet Lite1</item>
        <item>EfficientNet Lite2</item>
        <item>Plastic Model</item>
    </string-array>
</resources>
