<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsbold"
            android:gravity="center"
            android:text="@string/signup"
            android:textColor="@color/colorAccent"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:targetApi="jelly_bean" />

        <LinearLayout
            android:id="@+id/textInputLayoutFirstNameContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutFirstName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="1dp"
                android:layout_weight="1"
                android:hint="@string/first_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/firstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_name"
                    android:drawableLeft="@drawable/ic_name"
                    android:drawablePadding="10dp"
                    android:fontFamily="@font/poppinsmedium"
                    android:inputType="textPersonName"
                    tools:targetApi="jelly_bean" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutLastName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:layout_weight="1"
                android:hint="@string/last_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_name"
                    android:drawableLeft="@drawable/ic_name"
                    android:drawablePadding="10dp"
                    android:fontFamily="@font/poppinsmedium"
                    android:inputType="textPersonName"
                    tools:targetApi="jelly_bean" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutFirstNameContainer">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_email"
                android:drawableLeft="@drawable/ic_email"
                android:drawablePadding="10dp"
                android:fontFamily="@font/poppinsmedium"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                tools:targetApi="jelly_bean" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="10dp"
                android:fontFamily="@font/poppinsmedium"
                android:hint="Password"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPassword">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_confirm"
                android:drawablePadding="10dp"
                android:fontFamily="@font/poppinsmedium"
                android:hint="Confirm Password"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Include the RadioGroup -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutConfirmPassword">

            <RadioGroup
                android:id="@+id/genderRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="@font/poppinsmedium"
                    android:text="Sex:" />

                <RadioButton
                    android:id="@+id/radioButtonMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:button="@drawable/reporting_crimetype_radio_button"
                    android:fontFamily="@font/poppinsmedium"
                    android:gravity="center_horizontal"
                    android:paddingStart="4dp"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:text="Male" />


                <RadioButton
                    android:id="@+id/radioButtonFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:button="@drawable/reporting_crimetype_radio_button"
                    android:fontFamily="@font/poppinsmedium"
                    android:paddingStart="4dp"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:text="Female" />

                <RadioButton
                    android:id="@+id/radioButtonOther"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/reporting_crimetype_radio_button"
                    android:fontFamily="@font/poppinsmedium"
                    android:gravity="center_horizontal"
                    android:paddingStart="4dp"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:text="Other"
                    android:textAlignment="center" />

            </RadioGroup>

        </com.google.android.material.textfield.TextInputLayout>


        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutGender" />

        <Button
            android:id="@+id/buttonSignUp"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:text="@string/signup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progress" />


        <TextView
            android:id="@+id/loginText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/poppinsmedium"
            android:text="@string/loginhere"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonSignUp"
            tools:targetApi="jelly_bean" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>